# hdd_cdd_calculator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  update-example-plot.yml
examples/: sample_energy_data.csv
hdd_cdd/: __init__.py  exceptions.py
hdd_cdd/tests/: test_calculator.py
hdd_cdd_calculator/: __init__.py  __main__.py  calculator.py  csv_utils.py  data_sources.py  exceptions.py  meteostat_api.py  regression.py  utils.py  visualization.py
