[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdd-cdd-calculator"
version = "0.1.3"
description = "A Python library for calculating Heating Degree Days (HDD) and Cooling Degree Days (CDD) from multiple weather data sources including the U.S. NWS API and Meteostat, with regression and visualization tools."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ryan Kmetz", email = "consultrmk@gmail.com" }
]
keywords = [
    "HDD",
    "CDD",
    "degree-days",
    "weather",
    "climate",
    "energy",
    "NWS",
    "Meteostat",
    "regression",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "requests>=2.28",
    "pandas>=1.3",
    "meteostat>=1.6.5",
    "python-dateutil>=2.8",
    "scikit-learn>=1.0",
    "matplotlib>=3.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]
viz = [
    "matplotlib>=3.5"
]
tests = [
    "pytest>=7.0"
]

[project.urls]
"Documentation" = "https://github.com/rmkenv/hdd_cdd_calculator/tree/main/docs"
"Source" = "https://github.com/rmkenv/hdd_cdd_calculator"
"Tracker" = "https://github.com/rmkenv/hdd_cdd_calculator/issues"

[tool.setuptools]
# Make sure setuptools only packages our main code
packages = ["hdd_cdd_calculator"]
